Fix bad contrast when header image applied

--- a/themes/Fifteen/accents/13.css
+++ b/themes/Fifteen/accents/13.css
@@ -156,3 +156,44 @@ footer .footer a,
 .navbar-inverse .navbar-nav > li > a:focus {
     color: #666;
 }
+
+.bkg-png .jumbotron .container h2,
+.bkg-png .nav-tabs > li:not(.active) > a,
+.bkg-png .navbar-inverse .navbar-nav > .active > a,
+.bkg-png .navbar-inverse .navbar-nav > .active > a:focus,
+.bkg-png .navbar-inverse .navbar-nav > .active > a:hover,
+.bkg-png .navbar-inverse .navbar-nav > li > a,
+.bkg-png .navbar-inverse .navbar-nav > .active > a,
+.bkg-png .navbar-inverse .navbar-nav > .active > a:hover,
+.bkg-png .navbar-inverse .navbar-nav > .active > a:focus,
+.bkg-png .navbar-inverse .navbar-brand:hover,
+.bkg-png .navbar-inverse .navbar-brand:hover,
+.bkg-png .navbar-inverse .navbar-brand:focus,
+.bkg-png .navbar-inverse .navbar-nav > li > a:hover,
+.bkg-png .navbar-inverse .navbar-nav > li > a:focus,
+.bkg-png .navbar-inverse .navbar-nav > .open > a,
+.bkg-png .navbar-inverse .navbar-nav > .open > a:hover,
+.bkg-png .navbar-inverse .navbar-nav > .open > a:focus,
+.bkg-png .navbar-inverse .navbar-brand,
+.bkg-png .navbar-inverse .navbar-nav > li > a,
+.bkg-jpg .jumbotron .container h2,
+.bkg-jpg .nav-tabs > li:not(.active) > a,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a:focus,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a:hover,
+.bkg-jpg .navbar-inverse .navbar-nav > li > a,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a:hover,
+.bkg-jpg .navbar-inverse .navbar-nav > .active > a:focus,
+.bkg-jpg .navbar-inverse .navbar-brand:hover,
+.bkg-jpg .navbar-inverse .navbar-brand:hover,
+.bkg-jpg .navbar-inverse .navbar-brand:focus,
+.bkg-jpg .navbar-inverse .navbar-nav > li > a:hover,
+.bkg-jpg .navbar-inverse .navbar-nav > li > a:focus,
+.bkg-jpg .navbar-inverse .navbar-nav > .open > a,
+.bkg-jpg .navbar-inverse .navbar-nav > .open > a:hover,
+.bkg-jpg .navbar-inverse .navbar-nav > .open > a:focus,
+.bkg-jpg .navbar-inverse .navbar-brand,
+.bkg-jpg .navbar-inverse .navbar-nav > li > a {
+	color: #fff !important;
+}
